Bug 423677 - misc places compiler warnings (r=mano, a=schrep)