toolkit/components/places/src/nsNavHistoryResult.cpp
@@ -384,8 +384,8 @@ nsNavHistoryContainerResultNode::nsNavHistoryContainerResultNode(
   mContainerType(aContainerType),
   mExpanded(PR_FALSE),
   mChildrenReadOnly(aReadOnly),
-  mDynamicContainerType(aDynamicContainerType),
-  mOptions(aOptions)
+  mOptions(aOptions),
+  mDynamicContainerType(aDynamicContainerType)
 {
 }
 
